// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render App with close drawer 1`] = `
<Fragment>
  <Connect(DrawerContainer) />
  <main
    className="open"
  >
    <Connect(withRouter(NavBarContainer)) />
    <PageSwitch />
  </main>
</Fragment>
`;

exports[`App should render App with open drawer 1`] = `
<Fragment>
  <Connect(DrawerContainer) />
  <main
    className="open shift"
  >
    <Connect(withRouter(NavBarContainer)) />
    <PageSwitch />
  </main>
</Fragment>
`;
